[package]
name = "slint_app"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = { version = "1.12", default-features = false, features = ["std", "backend-winit", "renderer-software", "compat-1-2"] }
may = "0.3.42"
may_minihttp = "0.1.11"
tquic = { version = "1.6.0", features = ["h3", "qlog"] }
tokio = { version = "1.0", features = ["rt", "net", "time", "macros"] }
bytes = "1.0"
rcgen = "0.12"
ring = "0.17"
log = "0.4"
env_logger = "0.11"

[build-dependencies]
slint-build = "1.12.1"
