[package]
name = "slint_app"
version = "0.1.0"
edition = "2024"

[dependencies]
slint = { version = "1.12.1", default-features = false, features = ["std", "backend-winit", "renderer-software", "compat-1-2"] }
may = "0.3.51"
may_minihttp = "0.1.11"
tquic = { version = "1.6.0", features = ["h3", "qlog"] }
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "net", "time", "macros"] }
bytes = "1.10.1"
rcgen = "0.14.3"
ring = "0.17.14"
log = "0.4.27"
env_logger = "0.11.8"
chrono = { version = "0.4.38", features = ["serde"] }
thiserror = "2.0.9"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.133"

[[bin]]
name = "cert_gen"
path = "src/bin/cert_gen.rs"

[build-dependencies]
slint-build = "1.12.1"
